--- a/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
+++ b/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
@@ -130,7 +130,7 @@
                                 <DxMenuItem NavigateUrl="/party" Text="Party" IconCssClass="bi bi-person" />
                                 <DxMenuItem NavigateUrl="/productt" Text="Supplier" IconCssClass="bi bi-truck" />
                                 <DxMenuItem NavigateUrl="/Bank" Text="Bank" IconCssClass="bi bi-bank" />
-                                <DxMenuItem NavigateUrl="/Accounts" Text="Accounts" IconCssClass="bi bi-journal-text" />
+                                <DxMenuItem NavigateUrl="/account" Text="Accounts" IconCssClass="bi bi-journal-text" />
                                 <DxMenuItem NavigateUrl="/Service" Text="Service" IconCssClass="bi bi-gear" />
                                 <DxMenuItem NavigateUrl="/ServiceGroup" Text="Service Group" IconCssClass="bi bi-collection" />
                                 <DxMenuItem NavigateUrl="/HSN/SAC" Text="HSN/SAC" IconCssClass="bi bi-card-list" />
