--- a/FreightBKShippingWebApp/Components/Pages/BranchPage/Branchpage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/BranchPage/Branchpage.razor
@@ -33,7 +33,10 @@
                 <DxToolbarItem Text="Add" IconCssClass="bi bi-plus-circle" Click="OnCreateNew" />
                 <DxToolbarItem Text="Edit" IconCssClass="bi bi-pencil-square" Click="OnEdit" />
                 <DxToolbarItem Text="Delete" IconCssClass="bi bi-trash" Click="OnDelete" />
-                <DxToolbarItem Text="Refresh" IconCssClass="bi bi-arrow-clockwise" Click="@(async (_) => await LoadBranchesAsync())" />
+<DxToolbarItem 
+    Text="Refresh" 
+    IconCssClass="bi bi-arrow-clockwise" 
+    Click="@LoadBranchesAsync" />
             </Items>
         </DxToolbar>
     </ToolbarTemplate>
