--- a/FreightBKShippingWebApp/Components/Pages/YearPage/YearAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/YearPage/YearAddEditPage.razor
@@ -11,20 +11,20 @@
         <DxFormLayout>
 
             <DxFormLayoutItem Caption="Year Name">
-                <ChildContent Context="ctx">
+                <ChildContent Context="ctx" >
                     <DxTextBox @bind-Text="EditModel.YearName" />
                 </ChildContent>
             </DxFormLayoutItem>
 
             <DxFormLayoutItem Caption="From Date">
                 <ChildContent Context="ctx">
-                    <DxDateEdit @bind-Date="EditModel.YearDateFrom" />
+                    <DxDateEdit @bind-Date="EditModel.YearDateFrom" Format="yyyy-MM-dd" />
                 </ChildContent>
             </DxFormLayoutItem>
 
             <DxFormLayoutItem Caption="To Date">
                 <ChildContent Context="ctx">
-                    <DxDateEdit @bind-Date="EditModel.YearDateTo" />
+                    <DxDateEdit @bind-Date="EditModel.YearDateTo" Format="yyyy-MM-dd" />
                 </ChildContent>
             </DxFormLayoutItem>
 
