--- a/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
+++ b/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
@@ -128,6 +128,7 @@
                         <DxMenuItem Text="Masters" IconCssClass="bi bi-collection-fill" >
                             <Items>
                                 <DxMenuItem NavigateUrl="/party" Text="Party" IconCssClass="bi bi-person" />
+                                <DxMenuItem NavigateUrl="/accounttype" Text="AccountType" IconCssClass="bi bi-person" />
                                 <DxMenuItem NavigateUrl="/productt" Text="Supplier" IconCssClass="bi bi-truck" />
                                 <DxMenuItem NavigateUrl="/Bank" Text="Bank" IconCssClass="bi bi-bank" />
                                 <DxMenuItem NavigateUrl="/account" Text="Accounts" IconCssClass="bi bi-journal-text" />
