--- a/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
+++ b/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
@@ -117,7 +117,7 @@
                                 <DxMenuItem Text="Year" NavigateUrl="/year" IconCssClass="bi bi-calendar3" />
                                 <DxMenuItem Text="Voucher Type" NavigateUrl="/voucherconfig" IconCssClass="bi bi-receipt" />
                                 <DxMenuItem Text="User" NavigateUrl="/user" IconCssClass="bi bi-person-circle" />
-                                <DxMenuItem Text="GST Slab" NavigateUrl="/gstslab" IconCssClass="bi bi-cash-coin" />
+                                <DxMenuItem Text="GST Slab" NavigateUrl="/gstslabs" IconCssClass="bi bi-cash-coin" />
 
                                @*  <DxMenuItem NavigateUrl="/company-config" Text="Company Config" IconCssClass="bi bi-gear"/>
                                 <DxMenuItem NavigateUrl="/send-file" Text="send"></DxMenuItem> *@
@@ -133,11 +133,11 @@
                                 <DxMenuItem NavigateUrl="/Accounts" Text="Accounts" IconCssClass="bi bi-journal-text" />
                                 <DxMenuItem NavigateUrl="/Service" Text="Service" IconCssClass="bi bi-gear" />
                                 <DxMenuItem NavigateUrl="/ServiceGroup" Text="Service Group" IconCssClass="bi bi-collection" />
-                                <DxMenuItem NavigateUrl="/HSN/SAC" Text="HSN/SAC" IconCssClass="bi bi-card-list" />
-                                <DxMenuItem NavigateUrl="/Cargo" Text="Cargo" IconCssClass="bi bi-box-seam" />
+                                <DxMenuItem NavigateUrl="/hsnsac" Text="HSN/SAC" IconCssClass="bi bi-card-list" />
+                                <DxMenuItem NavigateUrl="/cargo" Text="Cargo" IconCssClass="bi bi-box-seam" />
                                 <DxMenuItem NavigateUrl="/StationPort" Text="Station/Port" IconCssClass="bi bi-geo" />
-                                <DxMenuItem NavigateUrl="/MiscellaneousMaster" Text="Miscellaneous Master" IconCssClass="bi bi-grid" />
-                                <DxMenuItem NavigateUrl="/Vessel" Text="Vessel" IconCssClass="bi bi-boats" /> <!-- alt: bi-ship if using -->
+                                <DxMenuItem NavigateUrl="/notify" Text="Miscellaneous Master" IconCssClass="bi bi-grid" />
+                                <DxMenuItem NavigateUrl="/vessels" Text="Vessel" IconCssClass="bi bi-boats" /> <!-- alt: bi-ship if using -->
                                 <DxMenuItem NavigateUrl="/currency" Text="Currency" IconCssClass="bi bi-currency-exchange" />
                                 <DxMenuItem NavigateUrl="/country" Text="Country" IconCssClass="bi bi-globe" />
                                 <DxMenuItem NavigateUrl="/Unit" Text="Unit" IconCssClass="bi bi-rulers" /> <!-- alt: bi-bounding-box -->
