--- a/FreightBKShippingWebApp/Components/Pages/CountryPage/CountryPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/CountryPage/CountryPage.razor
@@ -44,8 +44,11 @@
         <DxGridDataColumn FieldName="CountryName" Caption="Name" />
         <DxGridDataColumn FieldName="CountryCode" Caption="Code" Visible=false />
         <DxGridDataColumn FieldName="CountryCurrency" Caption="Currency" />
-        <DxGridDataColumn FieldName="CountryRemarks" Caption="Remarks" />
+        <DxGridDataColumn FieldName="CountryRemarks" Caption="Remarks" Visible=false />
         <DxGridDataColumn FieldName="CountryStatus" Caption="Active" />
+        <DxGridDataColumn FieldName="CountryCreated" Caption="Created At" />
+        <DxGridDataColumn FieldName="CountryUpdated" Caption="Update At" />
+
     </Columns>
 </DxGrid>
 
