--- a/FreightBKShippingWebApp/Components/Pages/CurrencyPage/CurrencyPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/CurrencyPage/CurrencyPage.razor
@@ -44,6 +44,8 @@
         <DxGridDataColumn FieldName="CurrencyName" Caption="Name" />
         <DxGridDataColumn FieldName="CurrencySymbol" Caption="Symbol" />
         <DxGridDataColumn FieldName="CurrencyStatus" Caption="Active" />
+        <DxGridDataColumn FieldName="CurrencyCreated" Caption="Created At" />
+        <DxGridDataColumn FieldName="CurrencyUpdated" Caption="Updated At" />
     </Columns>
 </DxGrid>
 
