--- a/FreightBKShippingWebApp/Components/Pages/CountryPage/CountryAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/CountryPage/CountryAddEditPage.razor
@@ -4,12 +4,12 @@
 @inject ToasteService ToastService
 @inject LoadingService LoadingService
 @inject CurrencyService CurrencyService
-<DxPopup @bind-Visible="Visible" ShowCloseButton="true" HeaderText="@Title" Width="600px">
+<DxPopup @bind-Visible="Visible" ShowCloseButton="true" HeaderText="@Title" Width="450px">
     <EditForm Model="@EditModel" OnValidSubmit="HandleValidSubmit">
         <DataAnnotationsValidator />
         <ValidationSummary />
         <DxFormLayout>
-            <DxFormLayoutItem Caption="Name">
+            <DxFormLayoutItem Caption="Name" ColSpanMd="10">
                 <ChildContent Context="itemContext">
                     <DxTextBox @bind-Text="EditModel.CountryName" />
                 </ChildContent>
@@ -19,7 +19,7 @@
                     <DxTextBox @bind-Text="EditModel.CountryCode" />
                 </ChildContent>
             </DxFormLayoutItem> *@
-            <DxFormLayoutItem Caption="Currency">
+            <DxFormLayoutItem Caption="Currency" ColSpanMd="10">
                 <ChildContent Context="itemContext">
                     <DxComboBox TData="Currency" TValue="String"
                                 Data="@CurrencyList"
@@ -33,16 +33,7 @@
                                 SearchFilterCondition="ListSearchFilterCondition.StartsWith" />
                 </ChildContent>
             </DxFormLayoutItem>
-            <DxFormLayoutItem Caption="Remarks">
-                <ChildContent Context="itemContext">
-                    <DxMemo @bind-Text="EditModel.CountryRemarks" Rows="2" />
-                </ChildContent>
-            </DxFormLayoutItem>
-            <DxFormLayoutItem Caption="Active">
-                <ChildContent Context="itemContext">
-                    <DxCheckBox @bind-Checked="EditModel.CountryStatus" />
-                </ChildContent>
-            </DxFormLayoutItem>
+           
         </DxFormLayout>
 
         <div class="mt-3 text-end">
