--- a/FreightBKShippingWebApp/Components/Pages/CurrencyPage/CurrencyAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/CurrencyPage/CurrencyAddEditPage.razor
@@ -4,29 +4,29 @@
 @inject ToasteService ToastService
 @inject LoadingService LoadingService
 
-<DxPopup @bind-Visible="Visible" ShowCloseButton="true" HeaderText="@Title" Width="600px">
+<DxPopup @bind-Visible="Visible" ShowCloseButton="true" HeaderText="@Title" Width="450px">
     <EditForm Model="@EditModel" OnValidSubmit="HandleValidSubmit">
         <DataAnnotationsValidator />
         <ValidationSummary />
 
         <DxFormLayout>
-            <DxFormLayoutItem Caption="Name">
+            <DxFormLayoutItem Caption="Name" ColSpanMd="10">
                 <ChildContent Context="itemContext">
                     <DxTextBox @bind-Text="EditModel.CurrencyName" />
                 </ChildContent>
             </DxFormLayoutItem>
 
-            <DxFormLayoutItem Caption="Symbol">
+            <DxFormLayoutItem Caption="Symbol" ColSpanMd="10">
                 <ChildContent Context="itemContext">
                     <DxTextBox @bind-Text="EditModel.CurrencySymbol" />
                 </ChildContent>
             </DxFormLayoutItem>
 
-            <DxFormLayoutItem Caption="Active">
+           @*  <DxFormLayoutItem Caption="Active">
                 <ChildContent Context="itemContext">
                     <DxCheckBox @bind-Checked="EditModel.CurrencyStatus" />
                 </ChildContent>
-            </DxFormLayoutItem>
+            </DxFormLayoutItem> *@
         </DxFormLayout>
 
         <div class="mt-3 text-end">
