--- a/FreightBKShippingWebApp/Components/Pages/Account/AccountAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/Account/AccountAddEditPage.razor
@@ -12,8 +12,9 @@
 horizontalAlignment="HorizontalAlignment.Center"
 verticalAlignment="VerticalAlignment.Center"
          scrollable="true">
+         <BodyContentTemplate Context="ctxaccountadd">
     <EditForm Model="@EditModel" OnValidSubmit="HandleValidSubmit" Context="ctxaccount">
-        <DataAnnotationsValidator />
+            <DataAnnotationsValidator />
         <ValidationSummary />
 
         <DxFormLayout>
@@ -34,20 +35,22 @@ verticalAlignment="VerticalAlignment.Center"
                                 SearchMode="ListSearchMode.AutoSearch"
                                 SearchFilterCondition="ListSearchFilterCondition.StartsWith" />
                 </div> 
-
-
-
             </DxFormLayoutItem>
-            <DxFormLayoutItem Caption="Type" ColSpanMd="6">
+        <DxFormLayoutItem Caption="Type" ColSpanMd="6">
                 <DxComboBox Data="@typeList"
                             TextFieldName="AccountTypeName"
                             ValueFieldName="AccountTypeId"
-                            @bind-Value="EditModel.AccountTypeId"
+                            Value="@EditModel.AccountTypeId"
+                          ValueChanged="@(async (int v) => await OnTypeChanged(v))"
+                            ValueExpression="() => EditModel.AccountTypeId"
                             ClearButtonDisplayMode="DataEditorClearButtonDisplayMode.Auto"
-                            NullText="Select Type..." AllowUserInput="true"
+                            NullText="Select Type..."
+                            AllowUserInput="true"
                             SearchMode="ListSearchMode.AutoSearch"
                             SearchFilterCondition="ListSearchFilterCondition.StartsWith" />
-            </DxFormLayoutItem>
+
+</DxFormLayoutItem>
+
             <DxFormLayoutItem Caption="Group" ColSpanMd="4">
                 <DxComboBox Data="@groupList"
                             TextFieldName="AccountGroupName"
@@ -59,6 +62,7 @@ verticalAlignment="VerticalAlignment.Center"
                             SearchMode="ListSearchMode.AutoSearch"
                             SearchFilterCondition="ListSearchFilterCondition.StartsWith" />
             </DxFormLayoutItem>
+ 
          @*    <DxFormLayoutItem Caption="Master Group " ColSpanMd="4">
                 <DxComboBox Data="@mastergroup"
                             @bind-Value="EditModel.AccountGroup"
@@ -79,12 +83,12 @@ verticalAlignment="VerticalAlignment.Center"
           
 
 
-            @if (EditModel.AccountGroup == "PARTY" || EditModel.AccountGroup == "BANK" || EditModel.AccountGroup == "CASH" || EditModel.AccountGroup == "PUMP" || EditModel.AccountGroup == "CUSTOMER" || EditModel.AccountGroup == "SUPPLIER" || EditModel.AccountGroup == "TRANSPORTER")
+            @if (EditModel.AccountGroupId !=0)
             {
                     <DxFormLayoutTabPages>  
                     <DxFormLayoutTabPage Caption="Basic Info">
 
-                     <DxFormLayoutGroup ColSpanMd="6" Caption="Basic Info">
+          <DxFormLayoutGroup ColSpanMd="6" Caption="Basic Info">
 
                         <DxFormLayoutItem Caption="Print Name" ColSpanMd="12">
                             <DxTextBox @bind-Text="EditModel.AccountPrintName" />
@@ -108,10 +112,20 @@ verticalAlignment="VerticalAlignment.Center"
                     SearchFilterCondition="ListSearchFilterCondition.StartsWith" />
                 </DxFormLayoutItem>
                             <DxFormLayoutItem Caption="Country" ColSpanMd="12">
-                                <DxComboBox Data="@countryList" @bind-Value="EditModel.AccountCountry"
-                                            ValueFieldName="CountryId" TextFieldName="CountryName" AllowUserInput="true"
+                               @*  <DxComboBox Data="@countryList" @bind-Value="EditModel.AccountCountry" TValue="string?" TData="Country"
+                                                ValueFieldName="CountryName" TextFieldName="CountryName" AllowUserInput="true"
                                             SearchMode="ListSearchMode.AutoSearch"
-                                            SearchFilterCondition="ListSearchFilterCondition.StartsWith" />
+                                            SearchFilterCondition="ListSearchFilterCondition.StartsWith" /> *@
+                                    <DxComboBox TData="Country" TValue="String"
+                                                Data="@countryList"
+                                                TextFieldName="CountryName"
+                                                ValueFieldName="CountryName"
+                                                ClearButtonVisible="true"
+                                                AllowUserInput="false"
+                                                NullText="-- Select Country --"
+                                                @bind-Text="EditModel.AccountCountry"
+                                                SearchMode="ListSearchMode.AutoSearch"
+                                                SearchFilterCondition="ListSearchFilterCondition.StartsWith" />
                             </DxFormLayoutItem>
 
                         <DxFormLayoutItem Caption="Contact Person" ColSpanMd="12">
@@ -133,10 +147,9 @@ verticalAlignment="VerticalAlignment.Center"
                 <DxFormLayoutItem Caption="Website" ColSpanMd="12">
                     <DxTextBox @bind-Text="EditModel.AccountWebsite" />
                 </DxFormLayoutItem>
-                      
+                    
 
-
-                   </DxFormLayoutGroup>
+          </DxFormLayoutGroup>
 
 
                         <DxFormLayoutGroup Caption="Tax Details" ColSpanMd="6">
@@ -185,16 +198,7 @@ verticalAlignment="VerticalAlignment.Center"
                                 </DxFormLayoutItem>
                             </DxFormLayoutGroup>
                         </DxFormLayoutGroup>
-             
-              @*   <DxFormLayoutItem Caption="Is SEZ" ColSpanMd="6">
-                    <DxCheckBox @bind-Checked="EditModel.AccountIsSez" />
-                </DxFormLayoutItem>
-              *@
-              
-
-              @*   <DxFormLayoutItem Caption="Status" ColSpanMd="6">
-                    <DxCheckBox @bind-Checked="EditModel.AccountStatus" />
-                </DxFormLayoutItem> *@
+                   
 
                     </DxFormLayoutTabPage>      
                     <DxFormLayoutTabPage Caption="Banking">
@@ -233,10 +237,43 @@ verticalAlignment="VerticalAlignment.Center"
             <DxButton Text="Save" RenderStyle="ButtonRenderStyle.Primary" SubmitFormOnClick="true" />
             <DxButton Text="Cancel" RenderStyle="ButtonRenderStyle.Secondary" Click="Hide" />
         </div>
-    </EditForm>
+    </EditForm> 
+    </BodyContentTemplate>
+ @*    <FooterContentTemplate>
+        <DxButton Text="Save" RenderStyle="ButtonRenderStyle.Primary" SubmitFormOnClick="true" />
+        <DxButton Text="Cancel" RenderStyle="ButtonRenderStyle.Secondary" Click="Hide" />
+    </FooterContentTemplate> *@
 </DxPopup>
+<style >
+    .popup-footer {
+        position: sticky; /* ya fixed bhi kar sakte ho */
+        bottom: 0;
+        background: #fff;
+        padding: 10px;
+        text-align: right;
+        border-top: 1px solid #ddd;
+        z-index: 10;
+    }
 
+</style>
 @code {
+    private async Task OnTypeChanged(int? newTypeId)
+    {
+        if (newTypeId.HasValue)
+        {
+            EditModel.AccountTypeId = newTypeId.Value;
+            var sel = typeList.FirstOrDefault(x => x.AccountTypeId == newTypeId.Value);
+            EditModel.AccountGroupId = sel?.AccountTypeGroupId ?? 0;
+        }
+        else
+        {
+            EditModel.AccountTypeId = 0; // or 0
+            EditModel.AccountGroupId = 0;
+        }
+    }
+
+
+    //==========================================
     [Parameter] public EventCallback OnSaved { get; set; }
 
     private bool Visible { get; set; }
@@ -316,6 +353,7 @@ verticalAlignment="VerticalAlignment.Center"
         LoadingService.Show();
         try
         {
+
             if (EditModel.AccountId == 0)
             {
                 var result = await AccountService.CreateAsync(EditModel);
