--- a/FreightBKShippingWebApp/Components/Pages/Account/Accountpage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/Account/Accountpage.razor
@@ -33,7 +33,9 @@
                 <DxToolbarItem Text="Add" IconCssClass="bi bi-plus-circle" Click="OnCreateNew" />
                 <DxToolbarItem Text="Edit" IconCssClass="bi bi-pencil-square" Click="OnEdit" />
                 <DxToolbarItem Text="Delete" IconCssClass="bi bi-trash" Click="OnDelete" />
-                <DxToolbarItem Text="Refresh" IconCssClass="bi bi-arrow-clockwise" Click="@(async (_) => await LoadAccountsAsync())" />
+<DxToolbarItem Text="Refresh" 
+               IconCssClass="bi bi-arrow-clockwise"
+                               Click="LoadAccountsAsync" />
             </Items>
         </DxToolbar>
     </ToolbarTemplate>
