--- a/FreightBKShippingWebApp/Components/Pages/Accounttype/AccountTypePage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/Accounttype/AccountTypePage.razor
@@ -34,7 +34,9 @@
                 <DxToolbarItem Text="Add" IconCssClass="bi bi-plus-circle" Click="OnCreateNew" />
                 <DxToolbarItem Text="Edit" IconCssClass="bi bi-pencil-square" Click="OnEdit" />
                 <DxToolbarItem Text="Delete" IconCssClass="bi bi-trash" Click="OnDelete" />
-                <DxToolbarItem Text="Refresh" IconCssClass="bi bi-arrow-clockwise" Click="@(async (_) => await LoadAccountTypesAsync())" />
+<DxToolbarItem Text="Refresh" 
+               IconCssClass="bi bi-arrow-clockwise" 
+               Click="LoadAccountTypesAsync" />
             </Items>
         </DxToolbar>
     </ToolbarTemplate>
