--- a/FreightBKShippingWebApp/Components/Pages/CargoPage/CargoAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/CargoPage/CargoAddEditPage.razor
@@ -32,7 +32,7 @@
             <DxFormLayoutItem Caption="HSN Code" ColSpanMd="11">
                 <ChildContent>
                   
-                    <DxComboBox TData="HsnSac" TValue="int"
+                    <DxComboBox TData="HsnSac" TValue="int?"
                                 Data="@HsnSacList"
                                 TextFieldName="HsnName"
                                 ValueFieldName="HsnId"
