--- a/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
+++ b/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
@@ -132,11 +132,11 @@
                                 <DxMenuItem NavigateUrl="/productt" Text="Supplier" IconCssClass="bi bi-truck" />
                                 <DxMenuItem NavigateUrl="/Bank" Text="Bank" IconCssClass="bi bi-bank" />
                                 <DxMenuItem NavigateUrl="/account" Text="Accounts" IconCssClass="bi bi-journal-text" />
-                                <DxMenuItem NavigateUrl="/Service" Text="Service" IconCssClass="bi bi-gear" />
-                                <DxMenuItem NavigateUrl="/ServiceGroup" Text="Service Group" IconCssClass="bi bi-collection" />
+                                <DxMenuItem NavigateUrl="/service" Text="Service" IconCssClass="bi bi-gear" />
+                                <DxMenuItem NavigateUrl="/servicegroup" Text="Service Group" IconCssClass="bi bi-collection" />
                                 <DxMenuItem NavigateUrl="/hsnsac" Text="HSN/SAC" IconCssClass="bi bi-card-list" />
                                 <DxMenuItem NavigateUrl="/cargo" Text="Cargo" IconCssClass="bi bi-box-seam" />
-                                <DxMenuItem NavigateUrl="/StationPort" Text="Station/Port" IconCssClass="bi bi-geo" />
+                                <DxMenuItem NavigateUrl="/location" Text="Station/Port" IconCssClass="bi bi-geo" />
                                 <DxMenuItem NavigateUrl="/notify" Text="Miscellaneous Master" IconCssClass="bi bi-grid" />
                                 <DxMenuItem NavigateUrl="/vessels" Text="Vessel" IconCssClass="bi bi-boats" /> <!-- alt: bi-ship if using -->
                                 <DxMenuItem NavigateUrl="/currency" Text="Currency" IconCssClass="bi bi-currency-exchange" />
