--- a/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
+++ b/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
@@ -115,7 +115,7 @@
                                 <DxMenuItem Text="Company" NavigateUrl="/company" IconCssClass="bi bi-buildings" />
                                 <DxMenuItem Text="Branch" NavigateUrl="/branch" IconCssClass="bi bi-diagram-3" />
                                 <DxMenuItem Text="Year" NavigateUrl="/year" IconCssClass="bi bi-calendar3" />
-                                <DxMenuItem Text="Voucher Type" NavigateUrl="/voucherconfig" IconCssClass="bi bi-receipt" />
+                                <DxMenuItem Text="Voucher Type" NavigateUrl="/voucher" IconCssClass="bi bi-receipt" />
                                 <DxMenuItem Text="User" NavigateUrl="/user" IconCssClass="bi bi-person-circle" />
                                 <DxMenuItem Text="GST Slab" NavigateUrl="/gstslabs" IconCssClass="bi bi-cash-coin" />
 
