chnges in notify seviceaddedit unitaddedit unitage servicemodel

--- a/FreightBKShippingWebApp/Components/Pages/UnitPage/UnitAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/UnitPage/UnitAddEditPage.razor
@@ -4,7 +4,7 @@
 @inject ToasteService ToastService
 @inject LoadingService LoadingService
 
-<DxPopup @bind-Visible="Visible" ShowCloseButton="true" HeaderText="@Title" Width="410px">
+<DxPopup @bind-Visible="Visible" ShowCloseButton="true" HeaderText="@Title" >
     <EditForm Model="@EditModel" OnValidSubmit="HandleValidSubmit">
         <DataAnnotationsValidator />
         <ValidationSummary />
