--- a/FreightBKShippingWebApp/Components/Pages/UnitPage/UnitPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/UnitPage/UnitPage.razor
@@ -45,8 +45,8 @@
         <DxGridDataColumn FieldName="UnitFormalName" Caption="Formal Name" />
         <DxGridDataColumn FieldName="UnitGstUnit" Caption="Group Name" />
         <DxGridDataColumn FieldName="UnitStatus" Caption="Active" />
-        <DxGridDataColumn FieldName="UnitCreated" Caption="Created" DisplayFormat="g" />
-        <DxGridDataColumn FieldName="UnitUpdated" Caption="Updated" DisplayFormat="g" />
+        <DxGridDataColumn FieldName="UnitCreated" Caption="Created" />
+        <DxGridDataColumn FieldName="UnitUpdated" Caption="Updated"  />
     </Columns>
 </DxGrid>
 
