--- a/FreightBKShippingWebApp/Components/Pages/NotifyPage/NotifyPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/NotifyPage/NotifyPage.razor
@@ -42,7 +42,7 @@
         <DxGridSelectionColumn Width="30" />
         <DxGridDataColumn FieldName="NotifyId" Caption="ID" Visible="false" />
         <DxGridDataColumn FieldName="NotifyName" Caption="Name" />
-        <DxGridDataColumn FieldName="NotifyType" Caption="Type" />
+        <DxGridDataColumn FieldName="NotifyType" Caption="Type" GroupIndex="0" AllowGroup="false" />
         <DxGridDataColumn FieldName="NotifyCity" Caption="GSTIN" />
         <DxGridDataColumn FieldName="NotifyCountry" Caption="PAN" />
         <DxGridDataColumn FieldName="NotifyEmail" Caption="Address" />
