--- a/FreightBKShippingWebApp/Components/Pages/ServicePage/ServiceAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/ServicePage/ServiceAddEditPage.razor
@@ -1,4 +1,9 @@
+
 ﻿  
+
+@using FreightBKShippingWebApp.Components.Pages.HSNSACPage
+@using FreightBKShippingWebApp.Components.Pages.UnitPage
+
 @using FreightBKShippingWebApp.Model
 @using FreightBKShippingWebApp.Models
 @using FreightBKShippingWebApp.Services
@@ -10,7 +15,44 @@
 @inject UnitService UnitService
 @inject AccountService AccountService
 
-<DxPopup @bind-Visible="Visible" ShowCloseButton="true" HeaderText="@Title" Width="600px" CloseOnOutsideClick="false">
+
+
+<style>
+    .hsn-field-wrapper {
+        position: relative;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+    }
+
+    .hsn-combobox {
+        flex: 1;
+    }
+
+    .custom-plus-button {
+        font-size: 0.9rem;
+        width: 28px;
+        height: 28px;
+        padding: 0;
+        border-radius: 50%;
+        line-height: 26px;
+        text-align: center;
+        font-weight: bold;
+        background-color: #7976ff;
+        color: white;
+        box-shadow: 0 0 3px rgba(0,0,0,0.2);
+        border: none;
+        cursor: pointer;
+        flex-shrink: 0;
+    }
+
+        .custom-plus-button:hover {
+            background-color: #5f5ce6;
+        }
+</style>
+<DxPopup @bind-Visible="Visible" ShowCloseButton="true" HeaderText="@Title" CloseOnOutsideClick="false" MaxWidth="650px" Width="90%"
+         horizontalAlignment="HorizontalAlignment.Center"
+         verticalAlignment="VerticalAlignment.Center">
     <EditForm Model="@EditModel" OnValidSubmit="HandleValidSubmit" Context="CXservice">
         <DataAnnotationsValidator />
         <ValidationSummary />
@@ -37,6 +79,7 @@
                             SearchFilterCondition="ListSearchFilterCondition.StartsWith" />
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="HSN">
+                <div class="hsn-field-wrapper">
                 <DxComboBox TData="HsnSac" TValue="int?"
                             Data="@HsnSacList"
                             TextFieldName="HsnName"
@@ -47,11 +90,16 @@
                             @bind-Value="EditModel.ServiceHsnId"
                             SearchMode="ListSearchMode.AutoSearch"
                             SearchFilterCondition="ListSearchFilterCondition.StartsWith" ClearButtonDisplayMode="DataEditorClearButtonDisplayMode.Auto" />
-            </DxFormLayoutItem>
+                    <DxButton Click="@ShowHsnPopup"
+                              Text="+"
+                              CssClass="custom-plus-button" />
+                </div>
+                        </DxFormLayoutItem>
             <DxFormLayoutItem Caption="Purchase Rate">
                 <DxSpinEdit @bind-Value="EditModel.ServicePRate" />
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="Unit">
+                 <div class="hsn-field-wrapper">
                 <DxComboBox TData="Unit" TValue="int?"
                             Data="@UnitList"
                             TextFieldName="UnitName"
@@ -62,7 +110,11 @@
                             @bind-Value="EditModel.ServiceUnitId"
                             SearchMode="ListSearchMode.AutoSearch"
                             SearchFilterCondition="ListSearchFilterCondition.StartsWith" ClearButtonDisplayMode="DataEditorClearButtonDisplayMode.Auto" />
-            </DxFormLayoutItem>
+                <DxButton Click="@ShowUnitPopup"
+                          Text="+"
+                          CssClass="custom-plus-button" />
+                </div>
+                        </DxFormLayoutItem>
             <DxFormLayoutItem Caption="Sale Rate">
                 <DxSpinEdit @bind-Value="EditModel.ServiceSRate" ShowSpinButtons="false" />
             </DxFormLayoutItem>
@@ -119,7 +171,8 @@
         </div>
     </EditForm>
 </DxPopup>
-
+<UnitAddEditPage @ref="Unitpopup" OnSaved="RefreshHsnSacList" />
+<HsnSacAddEditPage @ref="popup" OnSaved="RefreshHsnSacList" />
 @code {
     [Parameter] public EventCallback OnSaved { get; set; }
 
@@ -135,7 +188,13 @@
         GroupList = await ServiceGroupService.GetAllAsync();
         HsnSacList = await HsnSacService.GetAllAsync();
         UnitList = await UnitService.GetAllAsync();
-        AccountList = await AccountService.GetAllAsync();
+        // Fetch all accounts
+        var allAccounts = await AccountService.GetAllAsync();
+
+        // Filter only Sales & Purchase Accounts (group id 22, 23)
+        AccountList = allAccounts
+            .Where(a => a.AccountGroupId == 22 || a.AccountGroupId == 23)
+            .ToList();
 
     }
     public class SelectItem
@@ -154,26 +213,45 @@
 {
     new SelectItem { Text = "ABSOLUTE", Value = "ABSOLUTE" },
     new SelectItem { Text = "PER UNIT", Value = "PERUNIT" }
+
 };
+
+    private UnitAddEditPage Unitpopup;
+    private HsnSacAddEditPage popup;
+    private void ShowHsnPopup(MouseEventArgs e)
+    {
+        popup.Show(new HsnSac() { HsnStatus = true });
+    }
+    private void ShowUnitPopup(MouseEventArgs e)
+    {
+        Unitpopup.Show(new Unit() { UnitStatus = true, UnitCreated = DateTime.Now });
+    }
+    private async Task RefreshHsnSacList()
+    {
+        HsnSacList = await HsnSacService.GetAllAsync();
+        UnitList = await UnitService.GetAllAsync();
+        StateHasChanged();
+    }
+
+
     public void Show(Service model)
     {
-        EditModel = model != null ? new Service
+        if (model != null && model.ServiceId > 0)
         {
-            ServiceId = model.ServiceId,
-            ServiceName = model.ServiceName,
-            ServiceCode = model.ServiceCode,
-            ServiceSRate = model.ServiceSRate,
-            ServicePRate = model.ServicePRate,
-            ServiceStatus = model.ServiceStatus,
-            ServiceRemarks = model.ServiceRemarks
-        } : new Service
+            // Edit mode – bind directly to the selected object
+            EditModel = model;
+            Title = "Edit Service";
+        }
+        else
         {
-            ServiceStatus = true
-        };
+            // Add mode – create new object
+            EditModel = new Service { ServiceStatus = true };
+            Title = "Add Service";
+        }
 
-        Title = model?.ServiceId > 0 ? "Edit Service" : "Add Service";
         Visible = true;
     }
+
 
     private void Hide() => Visible = false;
 
