--- a/FreightBKShippingWebApp/Components/Pages/Account/Accountpage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/Account/Accountpage.razor
@@ -41,16 +41,17 @@
     </ToolbarTemplate>
 
     <Columns>
-        <DxGridDataColumn FieldName="AccountId" Caption="ID" Visible="false" />
+        <DxGridDataColumn FieldName="AccountId" Caption="ID" Visible="false" MinWidth="80" />
         <DxGridSelectionColumn Width="30" />
-        <DxGridDataColumn FieldName="AccountName" Caption="Name" />
-        <DxGridDataColumn FieldName="AccountContactPerson" Caption="Contact Person" />
-        <DxGridDataColumn FieldName="AccountMobile" Caption="Mobile" />
-        <DxGridDataColumn FieldName="AccountEmail" Caption="Email" />
-        <DxGridDataColumn FieldName="AccountCity" Caption="City" />
-        <DxGridDataColumn FieldName="AccountCountry" Caption="Country" />
-        <DxGridDataColumn FieldName="AccountStatus" Caption="Active" />
+        <DxGridDataColumn FieldName="AccountName" Caption="Name" MinWidth="120" />
+        <DxGridDataColumn FieldName="AccountContactPerson" Caption="Contact Person" MinWidth="150" />
+        <DxGridDataColumn FieldName="AccountMobile" Caption="Mobile" MinWidth="100" />
+        <DxGridDataColumn FieldName="AccountEmail" Caption="Email" MinWidth="150" />
+        <DxGridDataColumn FieldName="AccountCity" Caption="City" MinWidth="100" />
+        <DxGridDataColumn FieldName="AccountCountry" Caption="Country" MinWidth="100" />
+        <DxGridDataColumn FieldName="AccountStatus" Caption="Active" MinWidth="80" />
     </Columns>
+
 </DxGrid>
 
 <AccountAddEditPage @ref="popup" OnSaved="LoadAccountsAsync" />
