--- a/FreightBKShippingWebApp/Components/Pages/VoucherPage/VoucherPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/VoucherPage/VoucherPage.razor
@@ -37,15 +37,16 @@
         </DxToolbar>
     </ToolbarTemplate>
 
-    <Columns>
-        <DxGridDataColumn FieldName="VoucherId" Caption="ID" Visible="false" />
-        <DxGridSelectionColumn Width="30" />
-        <DxGridDataColumn FieldName="VoucherName" Caption="Name" />
-        <DxGridDataColumn FieldName="VoucherGroup" Caption="Group" />
-        <DxGridDataColumn FieldName="VoucherMethod" Caption="Method" />
-        <DxGridDataColumn FieldName="VoucherStatus" Caption="Active" />
-        <DxGridDataColumn FieldName="VoucherCreated" Caption="Created On" DisplayFormat="dd/MM/yyyy" />
-    </Columns>
+<Columns>
+    <DxGridDataColumn FieldName="VoucherId" Caption="ID" Visible="false"  MinWidth="80"/>
+    <DxGridSelectionColumn Width="30" />
+    <DxGridDataColumn FieldName="VoucherName" Caption="Name"  MinWidth="120" />
+    <DxGridDataColumn FieldName="VoucherGroup" Caption="Group"  MinWidth="100" />
+    <DxGridDataColumn FieldName="VoucherMethod" Caption="Method"  MinWidth="100" />
+    <DxGridDataColumn FieldName="VoucherStatus" Caption="Active"  MinWidth="120" />
+    <DxGridDataColumn FieldName="VoucherCreated" Caption="Created On"  MinWidth="120" DisplayFormat="dd/MM/yyyy" />
+</Columns>
+
 </DxGrid>
 
 <VoucherAddEditPage @ref="popup" OnSaved="LoadVouchersAsync" />
