--- a/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
+++ b/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
@@ -142,6 +142,7 @@
                                 <DxMenuItem NavigateUrl="/currency" Text="Currency" IconCssClass="bi bi-currency-exchange" />
                                 <DxMenuItem NavigateUrl="/country" Text="Country" IconCssClass="bi bi-globe" />
                                 <DxMenuItem NavigateUrl="/Unit" Text="Unit" IconCssClass="bi bi-rulers" /> <!-- alt: bi-bounding-box -->
+                                <DxMenuItem NavigateUrl="/ratemaster" Text="Rate Master" IconCssClass="bi bi-rulers" /> <!-- alt: bi-bounding-box -->
 
 
                             </Items>
