--- a/FreightBKShippingWebApp/Components/Pages/VoucherPage/VoucherAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/VoucherPage/VoucherAddEditPage.razor
@@ -3,9 +3,14 @@
 @inject VoucherService VoucherService
 @inject ToasteService ToastService
 @inject LoadingService LoadingService
+@inject AccountService AccountService
+@inject YearService YearService
 
-<DxPopup @bind-Visible="Visible" ShowCloseButton="true" HeaderText="@Title" Width="700px">
-    <EditForm Model="@EditModel" OnValidSubmit="HandleValidSubmit" Context="ctnaddeditvocher">
+<DxPopup @bind-Visible="Visible" ShowCloseButton="true" HeaderText="@Title" CloseOnOutsideClick="false" MaxWidth="1050px" Width="90%"
+horizontalAlignment="HorizontalAlignment.Center"
+         verticalAlignment="VerticalAlignment.Center"
+         scrollable="true">
+    <EditForm Model="@EditModel" OnValidSubmit="HandleValidSubmit" Context="ctnaddeditvocher" >
         <DataAnnotationsValidator />
         <ValidationSummary />
 
@@ -16,10 +21,10 @@
                 <DxFormLayoutTabPage Caption="Voucher Info">
                     <DxFormLayoutItem Caption="Type" >
                         <DxComboBox Data="@voucherGroupList"
-                                    @bind-Value="EditModel.VoucherGroup"
-                                    ValueFieldName="Value"
-                                    TextFieldName="Text"
-                                    NullText="Select Voucher Group..." />
+                        @bind-Value="EditModel.VoucherGroup"
+                        ValueFieldName="Value"
+                        TextFieldName="Text"
+                        NullText="Select Voucher Group..." />
                     </DxFormLayoutItem>
 
                     <DxFormLayoutItem Caption="Voucher Code">
@@ -36,9 +41,9 @@
 
                     <DxFormLayoutItem Caption="Method Of Numbering">
                         <DxComboBox Data="@methodList"
-                                    @bind-Value="EditModel.VoucherMethod"
-                                    TextFieldName="Text"
-                                    ValueFieldName="Value" />
+                        @bind-Value="EditModel.VoucherMethod"
+                        TextFieldName="Text"
+                        ValueFieldName="Value" />
                     </DxFormLayoutItem>
 
                     <DxFormLayoutItem Caption="Is Duplicate">
@@ -47,10 +52,10 @@
 
                     <DxFormLayoutItem Caption="Reset">
                         <DxComboBox Data="@noresetList"
-                                    @bind-Value="EditModel.VoucherReset"
-                                    TextFieldName="Text"
-                                    ValueFieldName="Value"
-                                    NullText="Select Reset Option..." />
+                        @bind-Value="EditModel.VoucherReset"
+                        TextFieldName="Text"
+                        ValueFieldName="Value"
+                        NullText="Select Reset Option..." />
                     </DxFormLayoutItem>
 
                     <DxFormLayoutItem Caption="Is Tax Invoice">
@@ -58,11 +63,11 @@
                     </DxFormLayoutItem>
 
                     <DxFormLayoutItem Caption="Bank">
-                        <DxComboBox Data="@LoadBankList" 
-                                    @bind-Value="EditModel.VoucherBank1"
-                                    TextFieldName="BankName"
-                                    ValueFieldName="BankId"
-                                    NullText="Select Bank..." />
+                        <DxComboBox Data="@BankAccountList"
+                        @bind-Value="EditModel.VoucherBank1"
+                        TextFieldName="AccountName"
+                        ValueFieldName="AccountId"
+                        NullText="Select Bank..." />
                     </DxFormLayoutItem>
 
                     <DxFormLayoutItem Caption="Report ID / reportformats">
@@ -97,26 +102,34 @@
                 <!-- Voucher Number Tab -->
                 <DxFormLayoutTabPage Caption="Voucher Number">
                     <DxGrid @ref="voucherGrid"
-                            Data="@VoucherDetailList"
-                            KeyFieldName="VoucherDetailId"
-                            EditMode="GridEditMode.EditRow"
-                            ShowBorders="true"
-                            ShowColumnLines="true"
-                            PageSize="10"
-                            EditModelSaving="OnVoucherDetailSaving"
-                            DataItemDeleting="OnVoucherDetailDeleting"
-                            CustomizeEditModel="OnVoucherDetailCustomizeEditModel">
+                    Data="@VoucherDetailList"
+                    KeyFieldName="VoucherDetailId"
+                    EditMode="GridEditMode.EditRow"
+                    ShowBorders="true"
+                    ShowColumnLines="true"
+                    PageSize="10"
+                    EditModelSaving="OnVoucherDetailSaving"
+                    DataItemDeleting="OnVoucherDetailDeleting"
+                    CustomizeEditModel="OnVoucherDetailCustomizeEditModel">
 
                         <Columns>
-                            <DxGridCommandColumn Width="100px" NewButtonVisible="true" EditButtonVisible="true" DeleteButtonVisible="true" />
-                            <DxGridDataColumn FieldName="VoucherDetailYearId" Caption="Fin Year Id" />
-                            <DxGridDataColumn FieldName="VoucherDetailDate" Caption="Date" />
-                            <DxGridDataColumn FieldName="VoucherDetailStartNo" Caption="Start No." />
-                            <DxGridDataColumn FieldName="VoucherDetailPrefix" Caption="Prefix" />
-                            <DxGridDataColumn FieldName="VoucherDetailSufix" Caption="Suffix" />
-                            <DxGridDataColumn FieldName="VoucherDetailZeroFill" Caption="Zero Fill" />
-                            <DxGridDataColumn FieldName="VoucherDetailLastNo" Caption="Last No" />
-                            <DxGridDataColumn FieldName="VoucherDetailLutno" Caption="LUT No" />
+                            <DxGridCommandColumn Width="90" NewButtonVisible="true" EditButtonVisible="true" DeleteButtonVisible="true" />
+                            <DxGridDataColumn FieldName="VoucherDetailYearId" Caption="Fin Year" Width="150">
+                                <EditSettings>
+                                    <DxComboBoxSettings Data="@FinYearList"
+                                                        ValueFieldName="YearId"
+                                                        TextFieldName="YearName"
+                                                        NullText="Select Financial Year" />
+                                </EditSettings>
+                            </DxGridDataColumn>    
+                            
+                            <DxGridDataColumn FieldName="VoucherDetailDate" Caption="Date" Width="130" />
+                            <DxGridDataColumn FieldName="VoucherDetailStartNo" Caption="Start No." Width="100" />
+                            <DxGridDataColumn FieldName="VoucherDetailPrefix" Caption="Prefix" Width="100" />
+                            <DxGridDataColumn FieldName="VoucherDetailSufix" Caption="Suffix" Width="100" />
+                            <DxGridDataColumn FieldName="VoucherDetailZeroFill" Caption="Zero Fill" Width="100" />
+                            <DxGridDataColumn FieldName="VoucherDetailLastNo" Caption="Last No" Width="100" />
+                            <DxGridDataColumn FieldName="VoucherDetailLutno" Caption="LUT No" Width="100" />
                         </Columns>
                     </DxGrid>
                 </DxFormLayoutTabPage>
@@ -133,12 +146,14 @@
 @code {
     private List<VoucherDetail> VoucherDetailList = new();
     private List<Voucher> VoucherList = new();
-    private List<Account> BankList = new();
+    private List<Account> BankAccountList = new();
+    private List<YearModel> FinYearList = new();
     private DxGrid voucherGrid;
 
     private bool Visible { get; set; }
     private string Title { get; set; } = "Add/Edit Voucher";
     private Voucher EditModel { get; set; } = new();
+    private VoucherDetail Voucherdetail{ get; set; } = new();
 
     [Parameter] public EventCallback OnSaved { get; set; }
 
@@ -172,6 +187,21 @@
         new() { Text = "EXPENCE", Value = "EXPENCE" },
         new() { Text = "QUTTION", Value = "QUTTION" }
     };
+
+
+
+    protected override async Task OnInitializedAsync()
+    {
+
+        var allAccounts = await AccountService.GetAllAsync();
+
+        // Filter only Sales & Purchase Accounts (group id 22, 23)
+        BankAccountList = allAccounts
+            .Where(a => a.AccountTypeId == 10 )
+            .ToList();
+
+        FinYearList = await YearService.GetAllAsync();
+    }
 
     public void Show(Voucher voucher)
     {
