--- a/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
+++ b/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
@@ -151,7 +151,7 @@
                         <DxMenuItem Text="Voucher Entry" IconCssClass="bi bi-pen-fill" >
                             <Items>
                                @*  <DxMenuItem NavigateUrl="/invoice" Text="Purchase Invoice" IconCssClass="bi bi-clipboard-check"/> *@
-                                <DxMenuItem NavigateUrl="/bills" Text="Sell Invoice" IconCssClass="bi bi-clipboard-data"/>
+                                <DxMenuItem NavigateUrl="/bill" Text="Sale Invoice" IconCssClass="bi bi-clipboard-data" />
                             </Items>
                         </DxMenuItem>
 
