--- a/FreightBKShippingWebApp/Components/Pages/NotifyPage/NotifyAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/NotifyPage/NotifyAddEditPage.razor
@@ -55,7 +55,7 @@
                                 Data="@stateList"
                                 TextFieldName="StateName"
                                 ValueFieldName="StateId"
-                                ClearButtonDisplayMode="DataEditorClearButtonDisplayMode.Auto" "
+                                ClearButtonDisplayMode="DataEditorClearButtonDisplayMode.Auto"
                                 AllowUserInput="false"
                                 NullText="-- Select State --"
                                 @bind-Value="EditModel.NotifyStateId"
