--- a/FreightBKShippingWebApp/Components/Pages/NotifyPage/NotifyPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/NotifyPage/NotifyPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/notify"
-@using FreightBKShippingWebApp.Models
+@using FreightBKShippingWebApp.Model
 @using FreightBKShippingWebApp.Services
 @using FreightBKShippingWebApp.Components.Pages
 @inject NotifyService NotifyService
