--- a/FreightBKShippingWebApp/Components/Pages/VesselPage/VesselAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/VesselPage/VesselAddEditPage.razor
@@ -1,4 +1,4 @@
-﻿@using FreightBKShippingWebApp.Models
+﻿@using FreightBKShippingWebApp.Model
 @using FreightBKShippingWebApp.Services
 @inject VesselService VesselService
 @inject ToasteService ToastService
