--- a/FreightBKShippingWebApp/Components/Pages/VesselPage/VesselPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/VesselPage/VesselPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/vessels"
-@using FreightBKShippingWebApp.Models
+@using FreightBKShippingWebApp.Model
 @using FreightBKShippingWebApp.Services
 @using FreightBKShippingWebApp.Components.Pages
 @inject VesselService VesselService
