--- a/FreightBKShippingWebApp/Components/Pages/ServicePage/ServiceAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/ServicePage/ServiceAddEditPage.razor
@@ -1,10 +1,10 @@
 
 ﻿  
 
-﻿@using FreightBKShipping.Models
+
 @using FreightBKShippingWebApp.Components.Pages.HSNSACPage
 @using FreightBKShippingWebApp.Components.Pages.UnitPage
-
+@using FreightBKShippingWebApp.Components.Pages.Account
 @using FreightBKShippingWebApp.Model
 @using FreightBKShippingWebApp.Models
 @using FreightBKShippingWebApp.Services
@@ -15,6 +15,7 @@
 @inject HsnSacService HsnSacService
 @inject UnitService UnitService
 @inject AccountService AccountService
+@inject VoucherService VoucherService
 <style>
     .hsn-field-wrapper {
         position: relative;
@@ -22,7 +23,11 @@
         align-items: center;
         gap: 8px;
     }
-
+    .acc-combobox {
+    flex: 1;
+    min-width: 0; /* Critical: allows flex item to shrink below content size */
+    max-width: 100%;
+}
     .hsn-combobox {
         flex: 1;
     }
@@ -138,11 +143,23 @@
 
            
             <DxFormLayoutItem Caption="Voucher Type">
-                <DxSpinEdit @bind-Value="EditModel.ServiceVoucherId" />
+                 <DxComboBox TData="Voucher" TValue="int?"
+                            Data="@VoucherList"
+                            TextFieldName="VoucherName"
+                            ValueFieldName="VoucherId"
+                            ClearButtonVisible="true"
+                            AllowUserInput="false"
+                            NullText="-- Select Voucher --"
+                            @bind-Value="EditModel.ServiceVoucherId"
+                            SearchMode="ListSearchMode.AutoSearch"
+                            SearchFilterCondition="ListSearchFilterCondition.StartsWith" ClearButtonDisplayMode="DataEditorClearButtonDisplayMode.Auto" />
+          
             </DxFormLayoutItem>
-            <DxFormLayoutItem Caption="Account Name" ColSpanMd="12">
+            <DxFormLayoutItem Caption="Account Name" ColSpanMd="10">
+                   <div class="hsn-field-wrapper">
                 <DxComboBox TData="Account" TValue="int?"
                             Data="@AccountList"
+                            CssClass="acc-combobox"
                             TextFieldName="AccountName"
                             ValueFieldName="AccountId"
                             ClearButtonVisible="true"
@@ -151,6 +168,10 @@
                             @bind-Value="EditModel.ServiceAccountId"
                             SearchMode="ListSearchMode.AutoSearch"
                             SearchFilterCondition="ListSearchFilterCondition.StartsWith" ClearButtonDisplayMode="DataEditorClearButtonDisplayMode.Auto" />
+                             <DxButton Click="@ShowAccountPopup"
+                          Text="+"
+                          CssClass="custom-plus-button" />
+                          </div>
             </DxFormLayoutItem>
 
             <DxFormLayoutItem Caption="Is Goods">
@@ -167,8 +188,9 @@
         </div>
     </EditForm>
 </DxPopup>
-<UnitAddEditPage @ref="Unitpopup" OnSaved="RefreshHsnSacList" />
-<HsnSacAddEditPage @ref="popup" OnSaved="RefreshHsnSacList" />
+<UnitAddEditPage @ref="Unitpopup" OnSaved="RefreshList" />
+<HsnSacAddEditPage @ref="popup" OnSaved="RefreshList" />
+<AccountAddEditPage @ref="Accountpopup" OnSaved="RefreshList" />
 @code {
     [Parameter] public EventCallback OnSaved { get; set; }
 
@@ -179,11 +201,13 @@
     private List<HsnSac> HsnSacList = new();
     private List<Unit> UnitList = new();
     private List<Account> AccountList = new();
+     private List<Voucher> VoucherList = new();
     protected override async Task OnInitializedAsync()
     {
         GroupList = await ServiceGroupService.GetAllAsync();
         HsnSacList = await HsnSacService.GetAllAsync();
         UnitList = await UnitService.GetAllAsync();
+ VoucherList = await VoucherService.GetAllAsync();
         // Fetch all accounts
         var allAccounts = await AccountService.GetAllAsync();
 
@@ -211,7 +235,7 @@
     new SelectItem { Text = "PER UNIT", Value = "PERUNIT" }
 
 };
-
+   private AccountAddEditPage Accountpopup;
     private UnitAddEditPage Unitpopup;
     private HsnSacAddEditPage popup;
     private void ShowHsnPopup(MouseEventArgs e)
@@ -222,10 +246,22 @@
     {
         Unitpopup.Show(new Unit() { UnitStatus = true, UnitCreated = DateTime.Now });
     }
-    private async Task RefreshHsnSacList()
+    
+    private void ShowAccountPopup(MouseEventArgs e)
+    {
+        Accountpopup.Show(new Account());
+    }
+    private async Task RefreshList()
     {
         HsnSacList = await HsnSacService.GetAllAsync();
         UnitList = await UnitService.GetAllAsync();
+        // Fetch all accounts
+        var allAccounts = await AccountService.GetAllAsync();
+
+        // Filter only Sales & Purchase Accounts (group id 22, 23)
+        AccountList = allAccounts
+            .Where(a => a.AccountGroupId == 22 || a.AccountGroupId == 23)
+            .ToList();
         StateHasChanged();
     }
 
