--- a/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
+++ b/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
@@ -152,7 +152,9 @@
                         <DxMenuItem Text="Voucher Entry" IconCssClass="bi bi-pen-fill" >
                             <Items>
                                @*  <DxMenuItem NavigateUrl="/invoice" Text="Purchase Invoice" IconCssClass="bi bi-clipboard-check"/> *@
-                                <DxMenuItem NavigateUrl="/bills" Text="Sell Invoice" IconCssClass="bi bi-clipboard-data"/>
+                                <DxMenuItem NavigateUrl="/bills" Text="Sale Invoice" IconCssClass="bi bi-clipboard-data"/>
+                                <DxMenuItem NavigateUrl="/jobimport" Text="Job Import" IconCssClass="bi bi-clipboard-data" />
+                                <DxMenuItem NavigateUrl="/jobexport" Text="Job Export" IconCssClass="bi bi-clipboard-data" />
                             </Items>
                         </DxMenuItem>
 
