--- a/FreightBKShippingWebApp/Components/Pages/Account/AccountAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/Account/AccountAddEditPage.razor
@@ -27,7 +27,7 @@ verticalAlignment="VerticalAlignment.Center"
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="Opening Bal." ColSpanMd="6">
                 <div class="d-flex gap-1">
-                    <DxSpinEdit @bind-value="EditModel.AccountOpening" ShowSpinButtons="false"></DxSpinEdit>
+                        <DxSpinEdit @bind-value="EditModel.AccountOpening"  ShowSpinButtons=false></DxSpinEdit>
 
                     <DxComboBox Data="@balanceTypes"
                                 @bind-Value="EditModel.AccountBalanceType"
